// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormInlineLabel /> label should be at left 1`] = `
<DocumentFragment>
  .c0 {
  margin: 1rem .5rem;
}

.c0 > span {
  font-size: 1rem;
  margin-right: 0.46874rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c1 > div {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c1 > span {
  color: #323a46;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  -webkit-tap-highlight-color: transparent;
}

.c1 > span {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c1 > div {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

<label
    class="c0 c1"
  >
    <div />
    <input />
    <span>
      Label
    </span>
  </label>
</DocumentFragment>
`;

exports[`<FormInlineLabel /> should be block 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: .5rem;
}

.c0 > span {
  font-size: 1rem;
  margin-left: 0.46874rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c1 > div {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c1 > span {
  color: #323a46;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  -webkit-tap-highlight-color: transparent;
}

<label
    class="c0 c1"
  >
    <div />
    <input />
    <span>
      Label
    </span>
  </label>
</DocumentFragment>
`;

exports[`<FormInlineLabel /> should be disabled 1`] = `
<DocumentFragment>
  .c0 {
  margin: 1rem .5rem;
}

.c0 > span {
  font-size: 1rem;
  margin-left: 0.46874rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  opacity: 0.7;
  pointer-events: none;
}

.c1 > div {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c1 > span {
  color: #323a46;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  -webkit-tap-highlight-color: transparent;
}

<label
    class="c0 c1"
  >
    <div />
    <input />
    <span>
      Label
    </span>
  </label>
</DocumentFragment>
`;

exports[`<FormInlineLabel /> should render component 1`] = `
<DocumentFragment>
  .c0 {
  margin: 1rem .5rem;
}

.c0 > span {
  font-size: 1rem;
  margin-left: 0.46874rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c1 > div {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c1 > span {
  color: #323a46;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  -webkit-tap-highlight-color: transparent;
}

<label
    class="c0 c1"
  >
    <div />
    <input />
    <span>
      Label
    </span>
  </label>
</DocumentFragment>
`;
